started some infrastructure, but it's all wrong

--- a/daemon/templates/dashboard.html
+++ b/daemon/templates/dashboard.html
@@ -1,3 +1,8 @@
 <h1>Dashboard</h1>
 
 <p><address>Last updated: {{.Time}}</address></p>
+
+<form method="post" action="/systems/create" autocomplete="off" >
+	<label for="new_system_name">Add a System: </label>
+	<input type="text" id="new_system_name" size="25"></input>
+</form>
